Fixed issue of text overflow on left sidebar

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -228,6 +228,7 @@ html, body {
       line-height: 1.7;
       text-decoration: none;
       color: #585858;
+      white-space: normal;
     }
   }
 
